# object-store-bench

./: .gitignore  Cargo.toml  LICENSE.txt  local_bench.sh  readme.md  results.ndjson
src/: columnar.rs  download.rs  main.rs
