[package]
name = "object-store-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
object_store = { version = "0.6.1", features = ["aws", "gcp"] }
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
url = "2.2"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"